# rust_example_concurrency

./: Cargo.toml  Dockerfile  Makefile  README.md  SPEC.md  ai.txt  llms-full.txt
k8s/: deployment.yaml
src/: concorrente.rs
